--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ async-timeout==4.0.3
 attrs==24.2.0
 certifi==2024.8.30
 discord.py==2.4.0
+dotenv==0.0.5
 exceptiongroup==1.2.2
 frozenlist==1.4.1
 h11==0.14.0
@@ -15,6 +16,7 @@ idna==3.10
 multidict==6.1.0
 notion-client==2.2.1
 propcache==0.2.0
+python-dotenv==1.0.1
 sniffio==1.3.1
 typing_extensions==4.12.2
 yarl==1.15.5
