--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,67 @@
+absl-py==2.1.0
 aiohappyeyeballs==2.4.3
 aiohttp==3.10.10
 aiosignal==1.3.1
 anyio==4.6.2.post1
-async-timeout==4.0.3
-attrs==24.2.0
+attrs==23.2.0
+build==1.0.3
 certifi==2024.8.30
-discord.py==2.4.0
-exceptiongroup==1.2.2
+cffi==1.16.0
+cmake==3.29.2
+colorama==0.4.6
+contourpy==1.2.1
+cycler==0.12.1
+discord.py==2.3.2
+dlib==19.24.2
+flatbuffers==24.3.25
+fonttools==4.51.0
 frozenlist==1.4.1
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
 idna==3.10
+jax==0.4.26
+joblib==1.4.2
+kiwisolver==1.4.5
+matplotlib==3.8.4
+mediapipe==0.10.11
+ml-dtypes==0.4.0
+MouseInfo==0.1.3
+msvc_runtime==14.38.33130
 multidict==6.1.0
 notion-client==2.2.1
+numpy==1.26.4
+opencv-contrib-python==4.9.0.80
+opencv-python==4.9.0.80
+opt-einsum==3.3.0
+packaging==22.0
+pillow==10.3.0
 propcache==0.2.0
-python-dotenv==1.0.1
+protobuf==3.20.3
+PyAutoGUI==0.9.54
+pycparser==2.22
+PyDirectInput==1.0.4
+pygame==2.5.2
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pyparsing==3.1.2
+pyperclip==1.8.2
+pyproject_hooks==1.0.0
+PyQt5==5.15.10
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.13.0
+pyqtgraph==0.13.7
+PyRect==0.2.0
+PyScreeze==0.1.30
+python-dateutil==2.9.0.post0
+pytweening==1.2.0
+pywin32==306
+scikit-learn==1.4.2
+scipy==1.13.0
+six==1.16.0
 sniffio==1.3.1
-typing_extensions==4.12.2
-yarl==1.15.5
+sounddevice==0.4.6
+sqlite-bro==0.12.2
+threadpoolctl==3.5.0
+winpython==7.1.20240208
+yarl==1.16.0
